validation simplification and docs
simplified validation exports into one reusable validation function that takes the schemas as a parameter

began documenting code using jsdocs, not committed files as machine generated.

made login json schema and updated yaml file for documentation
